view 약간 수정